Page MenuHome GnuPG

--list-options broken when using --with-colons
Closed, ResolvedPublic

Description

When using --with-colons, some list-options seem to broken either in gpg2
(2.1.5) or in gpg2 and gpg (1.4.19).

For example:

gpg2 (2.1.5) only:

Neither 'show-sig-subpackets' nor 'show-sig-subpackets=26' work in version 2.1.5
– which, if I remember correctly, is a regression from 2.0. (By the way, the
manual mentions that show-subpackets is accepting optional arguments, but not
the syntax for specifying them.)

    $ gpg2 --with-colons --list-options show-sig-subpackets=26 \
           --list-sigs | grep spk | head -3
    [empty]

    $ gpg --with-colons --list-options show-sig-subpackets=26 \
          --list-sigs | grep spk | head -3
    spk:26:1:29:http%3A//…
    spk:26:1:29:http%3A//…
    spk:26:1:29:http%3A//…

    $ gpg2 --with-colons --list-options show-sig-subpackets \
           --list-sigs | grep spk | head -3
    [empty]

    $ gpg --with-colons --list-options show-sig-subpackets \
          --list-sigs | grep spk | head -3
    spk:30:1:1:%01
    spk:27:1:1:%01
    spk:25:1:1:%01

gpg1 and gpg2:

'show-policy-urls', 'show-keyserver-urls', etc. don't work – but contrary to
'show-sig-subpackets', the manual doesn't mention if they're supposed to work.

    $ gpg --with-colons --list-options show-policy-urls \
          --list-sigs | grep http | head -3
    [empty]

    $ gpg2 --with-colons --list-options show-policy-urls \
           --list-sigs | grep http | head -3
    [empty]

    $ gpg2 --list-options show-policy-urls \
           --list-sigs | grep http | head -3
       Signature policy: http://…
       Signature policy: http://…
       Signature policy: http://…

Versions:

$ gpg2 --version

gpg (GnuPG) 2.1.5

libgcrypt 1.6.3

[…]



$ gpg --version

gpg (GnuPG) 1.4.19

[…]

Details

Version
2.1.5

Event Timeline

werner added a subscriber: werner.

Indeed the first is a regression in 2.1. Fixed with commit 010e428.

The second is not supposed to work with --with-colons. GPGME uses
--list-options show-sig-subpackets="20,26"
instead.

werner claimed this task.
werner removed a project: Restricted Project.